--- a/css/style.css
+++ b/css/style.css
@@ -142,17 +142,6 @@ table {
           justify-content: space-between;
 }
 
-.line-decoration {
-  display: none;
-}
-
-.nav-socialmedia_logo {
-  display: block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .nav-socialmedia_actions {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -161,21 +150,70 @@ table {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding-top: 25px;
+}
+
+.line-decoration {
+  display: none;
 }
 
 .nav-socialmedia_action {
-  font-size: 15px;
-  padding: 0 5px;
+  font-size: 16px;
   color: #D1C8BB;
+  padding: 0 7px;
+}
+
+.nav-trigger {
+  color: #D1C8BB;
+  font-size: 20px;
+}
+
+.welcome-info_content {
+  padding: 70px 0 60px 0;
+}
+
+.welcome-info_content h2 {
+  font-size: 26px;
+  text-align: center;
+  line-height: 40px;
+  color: #D1C8BB;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.welcome-info_content p {
+  font-size: 14px;
+  text-align: center;
+  color: #F9F9F9;
+  font-weight: 400;
+  line-height: 20px;
+  padding-top: 28px;
+}
+
+.welcome-info_button {
+  text-align: center;
+}
+
+.welcome-info_more-trigger {
+  border: 1px solid #D1C8BB;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  width: 180px;
+  height: 50px;
+  color: #F9F9F9;
+  background-color: #D1C8BB;
 }
 
 .site-header {
   padding: 20px;
-  height: 100vh;
+  height: 50vh;
   background-image: url("/images/header/img1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+body {
+  font-family: 'Ubuntu', sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
