--- a/sass/_navUser.scss
+++ b/sass/_navUser.scss
@@ -1,3 +1,26 @@
 .nav-user {
     display: none;
 }
+
+@include breakpoint(medium) {
+    .nav-user {
+        padding-top: 50px;
+        @include flexBox(row);
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
+
+    .nav-user_actions {
+        @include flexBox(row);
+        justify-content: flex-end;
+
+
+        .nav-user_action {
+            padding: 0 10px;
+            text-transform: uppercase;
+            color: $fontSecondColor;
+        }
+    }
+}
