--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,7 @@ $paddingSection: 50px 100px;
 
 $paddingSectionSmall: 20px;
 $paddingSectionMediumV2: 40px 80px;
-
+$paddingSectionLarge: 60px 150px;
 
 
 $fontFirstColor: #D1C8BB;
