--- a/sass/_headerHeading.scss
+++ b/sass/_headerHeading.scss
@@ -86,3 +86,27 @@
 
 
 }
+
+@include breakpoint(large) {
+    .welcome-info {
+        @include flexBox(column);
+
+    }
+
+    .welcome-info_content {
+        padding: 150px 0 60px 0;
+
+        & h2 {
+            line-height: 60px;
+            letter-spacing: 2px;
+        }
+
+        & p {
+            font-size: 25px;
+            line-height: 35px;
+        }
+    }
+
+
+
+}
